# api-compatibility

./: .gitignore  LICENSE  README.md  TODO.md  api_v1.json  api_v2.json  parse_example.sh  parse_qt_base.sh  parse_qt_ws.sh
src/: api_compatibility_analyzer.py  lib_parse.py  lib_parser.py  main.py
src/analyzer/: README.md  __init__.py
src/analyzer/checkers/: __init__.py  base_checker.py  class_checker.py  enum_checker.py  function_checker.py  macro_checker.py
src/analyzer/core/: __init__.py  compatibility_checker.py
src/analyzer/models/: __init__.py  compatibility_models.py
src/analyzer/utils/: __init__.py  loader.py  report_generator.py
src/parser/: README.md  __init__.py  api_parser.py  ast_extractor.py  build_system.py  clang_utils.py  main.py
src/parser/core/: __init__.py  base_parser.py  class_parser.py  cpp_parser.py  enum_parser.py  function_parser.py  macro_parser.py
src/parser/models/: __init__.py  api_definition.py  class_models.py  enum_models.py  function.py  macro.py  member.py  parameter.py
src/parser/utils/: __init__.py  serializer.py  text_processor.py
test_lib/v1.0/: Makefile
test_lib/v1.0/include/: core.hpp  network.hpp  utils.hpp
test_lib/v2.0/: CMakeLists.txt
test_lib/v2.0/cmake/: test_v2_config.cmake.in
test_lib/v2.0/include/: core.hpp  network.hpp  new_feature.hpp  utils.hpp
